#37 unify get resources for more REST-fullness
